--- a/index.html
+++ b/index.html
@@ -35,12 +35,24 @@
       </form>
       <div class="part-two">
         <div class="part-two-header">
-          <p class="tip-amount-ph">Tip Amount</p>
-          <span>/ person</span>
-          <h3 class="tip-amount-numbers">$0.00</h3>
-          <p class="total-ph">Total</p>
-          <span>/ person</span>
-          <h3 class="total-numbers">$0.00</h3>
+          <div class="tip-amount">
+            <div class="tip-amount-top">
+              <p class="tip-amount ph">Tip Amount</p>
+              <span>/ person</span>
+            </div>
+            <div class="tip-amount-bottom">
+              <h3 class="tip-amount-result">$0.00</h3>
+            </div>
+          </div>
+          <div class="total">
+            <div class="total-top">
+              <p class="total ph">Total</p>
+              <span>/ person</span>
+            </div>
+            <div class="total-bottom">
+              <h3 class="total-result">$0.00</h3>
+            </div>
+          </div>
         </div>
         <button class="reset-all">Reset</button>
       </div>
