--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
           <button class="button-percent">50%</button>
           <input class="custom-input" placeholder="Custom"></input>
         </div>
-        <label for="input-number-people">Number of People</label>
+        <div class="row-div">
+          <div class="label-div">
+            <label for="input-number-people">Number of People</label>
+          </div>
+          <div class="eror-div">
+            <p>Can’t be zero</p>
+          </div>
+        </div>
         <div class="part-one-bottom">
           <img class="person-icon" src="./images/icon-person.svg" alt="person-icon">
           <input type="text" class="input-number-people">
